# libaxidma

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  classDMABuffer-members.html  classDMABuffer.html  classDMACtrl-members.html  classDMACtrl.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dmabuffer_8h.html  dmabuffer_8h__incl.map  dmabuffer_8h__incl.md5  dmabuffer_8h_source.html  dmactrl_8h.html  dmactrl_8h__incl.map  dmactrl_8h__incl.md5  dmactrl_8h_source.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  group__BD__GROUP.html  index.html  menudata.js  modules.html
.github/workflows/: main.yml
include/: dmabuffer.h  dmactrl.h
search/: all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  enums_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  groups_0.js  pages_0.js  searchdata.js  variables_0.js
src/: dmabuffer.cpp  dmactrl.cpp
